cabal-version: 2.2
name:
  dyna
version:
  0.1
-- synopsis:
-- description:
-- bug-reports:
license:
  MIT
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md

library
  exposed-modules:
    --Dyna.Lifted
    --Dyna.Unlifted
    --Dyna.Unboxed
    Dyna
  build-depends:
    , base >= 4.14
    , contiguous >= 0.6
    , primitive >= 0.7.1
    , vector >= 0.12
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -O2

test-suite unit
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Unit.hs
  build-depends:
    , base
    , dyna
    , contiguous
    , vector
  default-language:
    Haskell2010
